--- a/lec03_hw/ass03.tex
+++ b/lec03_hw/ass03.tex
@@ -196,6 +196,8 @@ certain two values.
 
 %% Q3
 \section{Prefix Calculator}
+Download "calculate.py" located in the same directory as this pdf file.
+
 We usually write mathematical expressions this way:
 $3+4*2$. This is called an infix notation, and although easy to understand, it has
 some drawbacks.
