--- a/langListingMonokai.tex
+++ b/langListingMonokai.tex
@@ -34,7 +34,8 @@
   keywordstyle=\color{magenta}\tiny\ttfamily,	% sets color for keywords
   stringstyle=\color{string}\tiny\ttfamily,		% sets color for strings
   commentstyle=\color{comment}\tiny\ttfamily,	% sets color for comments
-  emph={True, False, format_string, eff_ana_bf, permute, eff_ana_btr},
+  emph={True, False, format_string, eff_ana_bf, permute, eff_ana_btr, KeyError,
+  ValueError, ZeroDivisionError},
   emphstyle=\color{identifier}\tiny\ttfamily,
   morekeywords={with, as}
 }
