--- a/lec06/lec06.tex
+++ b/lec06/lec06.tex
@@ -27,7 +27,6 @@
 
 \title{Python 101}
 \subtitle{Lec06 \\ Classes}
-\author{thoum}
 
 \begin{document}
 \frame{\titlepage}
@@ -53,6 +52,15 @@ We pass values to functions, get values, pass them to another function....
   View programs as object communicating with each other.
 \end{frame}
 
+\begin{frame}
+\frametitle{WHY OOP?}
+\begin{enumerate}
+  \item Encapsulation: Hide details, open APIs.
+  \item Reusability: Need tweaking? Inherit.
+  \item and many more....
+\end{enumerate}
+\end{frame}
+
 \begin{frame}{Objects}
   Integers are objects (of the int class).
 
@@ -64,7 +72,7 @@ We pass values to functions, get values, pass them to another function....
 
 \begin{frame}
 \frametitle{Creating Classes of our own}
-  We don't usually use classes so much unless we start writing bigger programs.
+  We need classes so much unless we start writing bigger programs.
 
   We are going to build a basis for a simple RPG game.
 \end{frame}
